--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
+title: Portfolio de Hippolyte Mayard
+first_name: Hippolyte
 middle_name: R.
 last_name: Name
 contact_note: >
