feat:update project

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -76,6 +76,9 @@
 - title: Open Source Projects
   type: time_table
   contents:
+    - title: <a href="https://github.com/hippolytemayard/yolov11-open-source">YOLO v11 Open Source</a>
+      year: 2025
+      description: Clean, modular, Apache 2.0 licensed YOLOv11 implementation in pure PyTorch. Multi-task support for detection, segmentation, and pose estimation.
     - title: <a href="https://github.com/hippolytemayard/teeth-3d-mesh-segmentation">3D Teeth Mesh Segmentation</a>
       year: 2022
       description: Implementation of MeshSegNet for automated dental surface labeling (MICCAI 2022 Challenge)
